minio/tenant-console-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abg-uat-minio-tenant-logs-console-nodeport
  namespace: minio-tenant
  ownerReferences:
  - apiVersion: minio.min.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: Tenant
    name: abg-uat-minio-tenant-logs
    uid: 3ba49a0a-8978-4b7b-841b-83cdafc706c0
spec:
  type: NodePort
  selector:
    v1.min.io/tenant: abg-uat-minio-tenant-logs
  ports:
  - name: http-console
    port: 9090
    protocol: TCP
    targetPort: 9090
    nodePort: 30102
