minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: minio-ingress
spec:
  rules:
    - host: minio.local.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-minio-console
                port:
                  number: 9090
